<resources>
    <string name="app_name">HeartGate</string>
    <string name="speciality_prompt">Speciality</string>
    <string-array name="speciality_array">
        <item>Speciality:</item>
        <item>Cardiologist</item>
        <item>Internist</item>
        <item>General Practitioner</item>
        <item>other</item>
    </string-array>
    <string name="jobTitle_prompt">Job Title</string>
    <string-array name="jobTitle_array">
        <item>JobTitle:</item>
        <item>Doctor</item>
        <item>Professor/Assistant Professor</item>
        <item>Lecture/Assistant Lecture</item>
        <item>Specialist</item>
        <item>Consultant</item>
        <item>Other</item>
    </string-array>
    <string name="currentLiving_prompt">Current Living Place</string>
    <string-array name="currentLiving_array">
        <item>Current Living Place:</item>
        <item>6th of October</item>
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Behira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Helwan</item>
        <item>Ismailia</item>
        <item>Kafr El-Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="currentWork_prompt">Current Work Place</string>
    <string-array name="currentWork_array">
        <item>Current Work Place:</item>
        <item>6th of October</item>
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Behira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Helwan</item>
        <item>Ismailia</item>
        <item>Kafr El-Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="previousWork_prompt">Previous Work Place</string>
    <string-array name="previousWork_array">
        <item>Previous Work Place:</item>
        <item>6th of October</item>
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Behira</item>
        <item>Beni Suef</item>
        <item>Cairo</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Helwan</item>
        <item>Ismailia</item>
        <item>Kafr El-Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said</item>
        <item>Qalyubia</item>
        <item>Qena</item>
        <item>Sharqia</item>
        <item>Sohag</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="yearsOfExp_prompt">Years Of Experience</string>
    <string-array name="yearsOfExp_array">
        <item>Years Of Experience:</item>
        <item>1-3</item>
        <item>3-5</item>
        <item>5-7</item>
        <item>7-10</item>
        <item>More than 10 years</item>
    </string-array>
    <string name="title_activity_connections_tabs">ConnectionsTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="emptyField">Complete Fields</string>
    <string name="worngPassword">Wrong Pasworrd</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="loading">Loading ....</string>
    <string name="login">login</string>
    <string name="info">Info: Loading Please Wait Info: Loading Please WaitInfo: Loading Please WaitInfo: Loading Please WaitInfo: Loading Please WaitInfo: Loading Please Wait</string>
    <string name="water">1</string>
    <string name="electricity">2</string>
    <string name="workers">3</string>
    <string name="doctors">4</string>
    <string name="farmers">5</string>
    <string name="composition">
        <![CDATA[
    <h3>1. Composition</h3>
								<p>Active substance: bisoprolol fumarate (2:1)</p>
								<h3>2. Pharmaceutical form and quantity of active substance per unit</h3>
								<p>Heart-shaped, divisible (scored) coated tablet containing 2.5 mg, 5 mg and 10 mg.</p>
								<h3>3. Shelf life</h3>
								<p>The medicinal product must not be used after the date marked EXP on the pack.</p>
								<h3>4. Special precautions for storage</h3>
								<p>Keep the medicinal product out of the reach of children. Do not store above 25°C.</p>
								<h3>5. Pack</h3>
								<p>ConcorCOR 2.5 mg: Carton box containing 1, 2, 3, 4, or 5 AL/PVC strip and inner leaflet. Each strip contains 10 tablets.<br>Concor 5 and 10 mg: Carton box containing 1, 2 or 3 strips and inner leaflet. Each strip contains 10 tablets. Not all pack sizes may be marketed.</p>
								<h3>5. Excipients:</h3>
								<p><em>Tablet core:</em><br>
									<ul>
										<li>Calcium hydrogen phosphate anhydrous.<br></li>
										<li>Maize starch.<br></li>
										<li>Silica, colloidal anhydrous.<br></li>
										<li>Microcrystalline cellulose.<br></li>
										<li>Crospovidone.<br></li>
										<li>Magnesium stearate.<br><br></li>
									</ul>
								<em>Film coating:</em><br>
								<ul>
									<li><strong>ConcorCOR 2.5 mg:</strong> Hypermellose 2910/15, Macrogol 400, Dimeticone 100, Titanium dioxide (E171).<br></li>
									<li><strong>Concor 5 mg:</strong> Hypermellose 2910/15, Macrogol 400, Dimeticone 100 (Cat.No.277896), Iron oxide yellow (Cat.No.107474), Titanium dioxide (E171).<br></li>
									<li><strong>Concor 10 mg:</strong> Hypermellose 2910/15, Macrogol 400, Dimeticone 100 (Cat.No.277896), Iron oxide yellow (Cat.No.107474), Iron oxide red (Cat.No.107445), Titanium dioxide (E171).</li>
								</ul>
    ]]>
    </string>
    <string name="Indication">
        <![CDATA[
                   <h4>Essential hypertension.</h4>
								<h4>Angina associated with coronary heart disease.</h4>
								<h4>Hyperkinetic heart syndrome.</h4>
								<h4>Stable chronic heart failure.</h4>

        ]]>
    </string>
    <string name="Dosage">
        <![CDATA[

								<h3>General dosage guidelines:</h3>
								<ul>
									<li>Treatment with Concor should be based on the individual patient, starting with a low dose and increasing it slowly and gradually.</li>
									<li>Concor should be taken once a day in the morning before or with breakfast. It should be swallowed whole with a little liquid.</li>
									<li>In general, Concor is a long-term treatment and should not be withdrawn suddenly, as this can lead to a temporary deterioration in the condition of the patient (particularly in patients with coronary heart disease). The dose should be reduced gradually.</li>
								</ul>
								<h3>Specific dosage guidelines:</h3>
								<ul>
									<li>1. Treatment of essential hypertension, angina associated with coronary heart disease and hyperkinetic heart syndrome:<br>
									The usual starting dose is 5 mg per day. In many cases, this is also adequate for long-term treatment and can be increased to 10 mg once a day if necessary.</li><br>
									<li>2. Treatment of stable chronic heart failure:<br>
										The treating doctor should have experience in managing chronic heart failure and the patient should be stable (without acute heart failure) when treatment with Concor starts. The treatment must start with a titration phase based on the dosing schedule described below. If tolerability is good, the patient can move up to the next dose.</li><br>
									<li>- Week 1: 1.25 mg (half a 2.5 mg tablet) once daily.<br>
										- Week 2: 2.5 mg (one 2.5 mg tablet) once daily.<br>
										- Week 3: 3.75 mg (one and a half 2.5 mg tablets) once daily.<br>
										- Weeks 4-7: 5 mg (one 5 mg tablet) once daily.<br>
										- Weeks 8-11: 7.5 mg (one and a half 5 mg tablets) once daily.<br>
										- From week 12: 10 mg (one 10 mg tablet) once daily as maintenance treatment.<br><br>
									</li>
									<li>The maximum recommended dose is 10 mg once daily.
										During the titration phase, close monitoring of the patient (heart rate, blood pressure) is recommended and it is important to watch for signs of worsening heart failure.
										If the patient does not tolerate an increase in the dose or the maximum recommended dose well, a gradual reduction in the dose can be considered and the treatment continued with a lower dose. If heart failure worsens temporarily, or if the patient develops hypotension or bradycardia, a check on the dose of concomitant medication is recommended. If necessary, the bisoprolol dose can also be reduced temporarily or the treatment withdrawn. Once the patient has stabilized, consideration should be given to resuming the treatment or increasing the bisoprolol dose.
									</li>
								</ul>
								<h3>Dosage In Specific Clinical Situations</h3>
								<ul>
									<li>1. Patients with kidney or liver failure:</li>
									<li>Treatment of essential hypertension or angina pectoris:<br>
										The dose does not need to be adjusted for patients with mild or moderate kidney or liver failure. In patients with severely impaired kidney (creatinine clearance &#60; 20 ml/min) or liver function, a daily dose of 10 mg should not be exceeded. Experience of bisoprolol in the treatment of dialysis patients is limited. In spite of this, the dose does not need to be adjusted.</li>
									<li>Treatment of stable chronic heart failure:
										There are no pharmacokinetic data for patients with kidney or liver failure. Therefore, the dose must be increased very carefully.</li><br>
									<li>2. Elderly patients:</li>
									<li>The dose does not need to be adjusted.</li><br>
									<li>3. Children and adolescents:</li>
									<li>There are no pediatric data for Concor. For this reason, Concor is not recommended for patients under 18 years of age.</li>
								</ul>

        ]]>
    </string>
</resources>