<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bk"
    android:gravity="center"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan"
    tools:context="com.cat.ahmed.VTIFarm.View.RegisterScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:windowSoftInputMode="adjustPan">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txIn_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold"
                    android:fontFamily="@font/disneycomic"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txIn_userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/disneycomic"
                    android:gravity="center"
                    android:hint="@string/userName"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txIn_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/disneycomic"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"

                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txIn_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/disneycomic"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold"

                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txIn_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/disneycomic"
                    android:gravity="center"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold"

                    />
            </android.support.design.widget.TextInputLayout>


            <ImageView
                android:id="@+id/bt_signUp"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_signup"
                android:scaleType="fitXY" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
